--- a/01-hola-mundo/src/app/app.component.html
+++ b/01-hola-mundo/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-body class="container"></app-body>
+<app-footer></app-footer>
 
 <ul>
   <li>Nombre: {{nombre}}</li>
