--- a/02-spa/src/app/components/about/about.component.html
+++ b/02-spa/src/app/components/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+<hr>
+<p class="animated fadeIn">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam illo porro, accusantium sequi tempore placeat, aspernatur vitae suscipit repellendus labore quasi aperiam qui expedita unde commodi quam consectetur molestias? Dicta.
+</p>
+
+
