--- a/02-spa/src/app/components/heroe/heroe.component.html
+++ b/02-spa/src/app/components/heroe/heroe.component.html
@@ -1,1 +1,21 @@
-<p>heroe works!</p>
+<h1 class="animated fadeIn">{{heroe.nombre}}<small>{{heroe.aparicion}}</small></h1>
+<hr>
+<div class="row animated fadeIn fast">
+    <div class="col-md-4">
+        <img [src]="heroe.img" class="img-fluid" [alt]="">
+        <br><br>
+        <a [routerLink]="['/','heroes']" class="btn btn-outline-danger btn-block">Regresar</a>
+    </div>
+    <div class="col-md-8">
+        <h3>{{heroe.nombre}}</h3>
+        <hr>
+        <p>
+            {{heroe.bio}}
+        </p>
+        <div>
+            <!-- Observa lo del ngIfes una gran manera de resolverlo -->
+            <img *ngIf="heroe.casa == 'Marvel'"class="img-logo" src="assets/img/marvel-logo.png" alt="Marvel">
+            <img *ngIf="heroe.casa == 'DC'"class="img-logo" src="assets/img/dc-logo.jpg" alt="DC">
+        </div>
+    </div>
+</div>
