--- a/02-spa/src/app/components/buscador/buscador.component.html
+++ b/02-spa/src/app/components/buscador/buscador.component.html
@@ -1,5 +1,12 @@
 <h1>Buscando: <small>{{termino}}</small></h1>
 <hr>
+<div class="animated fadeIn fast" *ngIf="heroes.length === 0" class="row">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      No existen resultados con el termino: {{termino}}
+    </div>
+  </div>
+</div>
 <div class="card-columns">
     <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
         <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
