--- a/02-spa/src/app/components/buscador/buscador.component.html
+++ b/02-spa/src/app/components/buscador/buscador.component.html
@@ -1,6 +1,6 @@
 <h1>Buscando: <small>{{termino}}</small></h1>
 <hr>
-<div class="animated fadeIn fast" *ngIf="heroes.length === 0" class="row">
+<div class="row animated fadeIn fast" *ngIf="heroes.length === 0">
   <div class="col-md-12">
     <div class="alert alert-info" role="alert">
       No existen resultados con el termino: {{termino}}
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="card-columns">
-  <app-heroe-tarjeta [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i = index">
+  <app-heroe-tarjeta [heroe]="heroe" [index]="heroe.idx" *ngFor="let heroe of heroes; let i = index">
 
   </app-heroe-tarjeta>
 </div>
