--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -56,6 +56,16 @@
           <td> number (2 decimales)</td>
           <td> {{PI | number: ".0-2"}}</td>
         </tr>
+        <tr>
+          <td> {{porcentaje}} </td>
+          <td> percent </td>
+          <td> {{porcentaje | percent}}</td>
+        </tr>
+        <tr>
+          <td> {{porcentaje}} </td>
+          <td> percent (2 enteros - 2 decimales)</td>
+          <td> {{porcentaje | percent:"2.2-2"}}</td>
+        </tr>
       </tbody>
     </table>
     <h4>Slice</h4>
