--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -38,33 +38,48 @@
         </tr>
         <tr>
           <td> {{PI}} </td>
-          <td> number (defecto) </td>
+          <td> number </td>
           <td> {{PI | number}}</td>
         </tr>
         <tr>
           <td> {{PI}} </td>
-          <td> number (0 decimales)</td>
+          <td> number: "1.0-0" </td>
           <td> {{PI | number: "1.0-0"}}</td>
         </tr>
         <tr>
           <td> {{PI}} </td>
-          <td> number (n enteros)</td>
+          <td> number: "3.0-0" </td>
           <td> {{PI | number: "3.0-0"}}</td>
         </tr>
         <tr>
           <td> {{PI}} </td>
-          <td> number (2 decimales)</td>
+          <td>  number: ".0-2" </td>
           <td> {{PI | number: ".0-2"}}</td>
         </tr>
         <tr>
           <td> {{porcentaje}} </td>
-          <td> percent </td>
+          <td> percent:"2.2-2" </td>
           <td> {{porcentaje | percent}}</td>
         </tr>
         <tr>
           <td> {{porcentaje}} </td>
-          <td> percent (2 enteros - 2 decimales)</td>
+          <td> percent:"2.2-2" </td>
           <td> {{porcentaje | percent:"2.2-2"}}</td>
+        </tr>
+        <tr>
+          <td> {{salario}} </td>
+          <td> currency </td>
+          <td> {{salario | currency}}</td>
+        </tr>
+        <tr>
+          <td> {{salario}} </td>
+          <td> currency: "EUR" </td>
+          <td> {{salario | currency: "EUR"}}</td>
+        </tr>
+        <tr>
+          <td> {{salario}} </td>
+          <td> currency: "CAD": "symbol-narrow": ".0-0" </td>
+          <td> {{salario | currency: "CAD": "symbol-narrow": ".0-0"}}</td>
         </tr>
       </tbody>
     </table>
