--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -81,6 +81,12 @@
           <td> currency: "CAD": "symbol-narrow": ".0-0" </td>
           <td> {{salario | currency: "CAD": "symbol-narrow": ".0-0"}}</td>
         </tr>
+        <tr>
+          <td> {{valorPromesa}} </td>
+          <td> async </td>
+          <td> {{ valorPromesa | async }}</td>
+        </tr>
+
       </tbody>
     </table>
     <h4>Slice</h4>
