--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -86,6 +86,31 @@
           <td> async </td>
           <td> {{ valorPromesa | async }}</td>
         </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> date </td>
+          <!-- Sep 1, 2020 -->
+          <td> {{ fecha | date }}</td>
+        </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> date: "medium" </td>
+          <!-- Sep 1, 2020, 9:33:14 PM-->
+          <td> {{ fecha | date: "medium" }}</td>
+        </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> date: "short </td>
+          <!-- 9/1/20, 9:34 PM -->
+          <td> {{ fecha | date: "short" }}</td>
+        </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> date: "MMMM - dd" </td>
+          <!-- Formato personalizado -->
+          <!-- September - 01 -->
+          <td> {{ fecha | date: "MMMM - dd" }}</td>
+        </tr>
 
       </tbody>
     </table>
