--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -111,6 +111,32 @@
           <!-- September - 01 -->
           <td> {{ fecha | date: "MMMM - dd" }}</td>
         </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> date: "MMMM - dd":"":"en" </td>
+          <!-- Especificar idioma -->
+          <!-- September - 01 -->
+          <td> {{ fecha | date: "MMMM - dd":"":"en" }}</td>
+        </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> date: "MMMM - dd":"":"fr" </td>
+          <!-- Especificar idioma -->
+          <!-- September - 01 -->
+          <td> {{ fecha | date: "MMMM - dd":"":"fr" }}</td>
+        </tr>
+        <tr>
+          <td> {{fecha}} </td>
+          <td> 
+            date: "MMMM - dd":"":idioma 
+            <button (click)="idioma='es'" class="mr-1 btn btn-primary">Español</button>
+            <button (click)="idioma='en'" class="mr-1 btn btn-secondary">Ingles</button>
+            <button (click)="idioma='fr'" class="mr-1 btn btn-success">Frances</button>
+          </td>
+          <!-- Idioma desde componente -->
+          <!-- September - 01 -->
+          <td> {{ fecha | date: "MMMM - dd":"":idioma }}</td>
+        </tr>
 
       </tbody>
     </table>
