--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -12,6 +12,18 @@
       </thead>
       <tbody>
         <tr>
+          <td> {{nombre2}} </td>
+          <td> capitalizado</td>
+          <!-- <td> {{nombre2 | capitalizado: 1: true: "hola"}}</td> -->
+          <td> {{nombre2 | capitalizado: true}}</td>
+        </tr>
+        <tr>
+          <td> {{nombre2}} </td>
+          <td> capitalizado</td>
+          <!-- <td> {{nombre2 | capitalizado: 1: true: "hola"}}</td> -->
+          <td> {{nombre2 | capitalizado: false}}</td>
+        </tr>
+        <tr>
           <td> {{nombre}} </td>
           <td> uppercase</td>
           <td> {{nombre | uppercase}}</td>
