--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -150,6 +150,18 @@
           <td> {{ fecha | date: "MMMM - dd":"":idioma }}</td>
         </tr>
 
+        <tr>
+          <td> {{nombre}} </td>
+          <td> 
+            contrasena:{{activar}}
+            <br>
+            <button (click)="activar=!activar" class="btn btn-outline-primary">
+              Activar/Desactivar
+            </button>
+          </td>
+          <td> {{ nombre | contrasena:activar}}</td>
+        </tr>
+
       </tbody>
     </table>
     <h4>Slice</h4>
@@ -179,6 +191,7 @@
               [src]="videoUrl | domseguro" 
               frameborder="0" 
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen></iframe>
+              allowfullscreen>
+      </iframe>
     </div>
   </div>
