--- a/05-deseos/src/app/pages/tab1/tab1.page.html
+++ b/05-deseos/src/app/pages/tab1/tab1.page.html
@@ -1,11 +1,15 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
       Pendientes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  
+<ion-content [fullscreen]="true" color="dark">
+  <ion-list color="dark">
+    <ion-item *ngFor="let listaDeseo of deseosService.listas" detail color="dark">
+      <ion-label>{{listaDeseo.titulo}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
