--- a/05-deseos/src/app/pages/tab1/tab1.page.html
+++ b/05-deseos/src/app/pages/tab1/tab1.page.html
@@ -12,4 +12,11 @@
       <ion-label>{{listaDeseo.titulo}}</ion-label>
     </ion-item>
   </ion-list>
+  
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="tertiary" (click)="agregarLista()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
