--- a/05-deseos/src/app/pages/agregar/agregar.page.html
+++ b/05-deseos/src/app/pages/agregar/agregar.page.html
@@ -19,7 +19,10 @@
     <ion-list-header color="dark">
       <ion-label>Tareas por hacer</ion-label>
     </ion-list-header>
-    <ion-item color="dark" *ngFor="let item of lista.items">
+    <ion-item color="dark" 
+              *ngFor="let item of lista.items"
+              class="animated fadeInDown"
+              (ionChange)="cambioCheck(item)">
       <ion-checkbox slot="start" color="tertiary" [(ngModel)]="item.completado"></ion-checkbox>
       <ion-label>{{item.desc}}</ion-label>
     </ion-item>
