--- a/05-deseos/src/app/pages/tab1/tab1.page.html
+++ b/05-deseos/src/app/pages/tab1/tab1.page.html
@@ -5,6 +5,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+<app-listas></app-listas>
 
 <ion-content [fullscreen]="true" color="dark">
   <ion-list color="dark">
