--- a/05-deseos/src/app/components/listas/listas.component.html
+++ b/05-deseos/src/app/components/listas/listas.component.html
@@ -1,5 +1,5 @@
 <ion-list color="dark">
-  <ion-item-sliding *ngFor="let listaDeseo of deseosService.listas">
+  <ion-item-sliding *ngFor="let listaDeseo of deseosService.listas | filtroCompletado: terminada">
     <ion-item detail 
               color="dark"
               (click)="listaSeleccionada(listaDeseo)">
