--- a/05-deseos/src/app/components/listas/listas.component.html
+++ b/05-deseos/src/app/components/listas/listas.component.html
@@ -1,4 +1,4 @@
-<ion-list color="dark">
+<ion-list color="dark" #lista>
   <ion-item-sliding *ngFor="let listaDeseo of deseosService.listas | filtroCompletado: terminada">
     <ion-item detail 
               color="dark"
@@ -6,10 +6,15 @@
       <ion-label>{{listaDeseo.titulo}}</ion-label>
       <ion-note slot="end" color="tertiary">{{listaDeseo.items.length}} items</ion-note>
     </ion-item>
+    <ion-item-options side="start">
+      <ion-item-option (click)="cambiarNombreLista(listaDeseo)" color="primary">
+        <ion-icon name="create" slot="icon-only"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
     <ion-item-options side="end">
       <ion-item-option (click)="borrarLista(listaDeseo)" color="danger">
         <ion-icon name="close" slot="icon-only"></ion-icon>
-      </ion-item-option>
+      </ion-item-option> 
     </ion-item-options>
   </ion-item-sliding>
 </ion-list>
