--- a/06-miscelaneos/src/app/app.component.html
+++ b/06-miscelaneos/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="container main-container">
   <h1>Demo <small>Angular</small></h1>
   <hr>
-<!--   <app-ng-style></app-ng-style> -->
-<app-css></app-css>
-<p>Hola mundo desde app.component</p>
+  <app-clases></app-clases>
 </div>
