--- a/06-miscelaneos/src/app/app.component.html
+++ b/06-miscelaneos/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container main-container">
   <h1>Demo <small>Angular</small></h1>
   <hr>
-  <app-clases></app-clases>
+  <p [appResaltado]="'red'">
+    Hola Mundo
+  </p>
 </div>
