--- a/06-miscelaneos/src/app/app.component.html
+++ b/06-miscelaneos/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container main-container">
   <h1>Demo <small>Angular</small></h1>
   <hr>
-  <p [appResaltado]="'red'">
+  <!-- <p [appResaltado]="'red'">
     Hola Mundo
-  </p>
+  </p> -->
+  <app-ng-switch></app-ng-switch>
 </div>
