--- a/06-miscelaneos/src/app/app.component.html
+++ b/06-miscelaneos/src/app/app.component.html
@@ -1,8 +1,8 @@
+<app-navbar></app-navbar>
 <div class="container main-container">
   <h1>Demo <small>Angular</small></h1>
   <hr>
-  <!-- <p [appResaltado]="'red'">
-    Hola Mundo
-  </p> -->
-  <app-ng-switch></app-ng-switch>
+
+  <router-outlet></router-outlet>
+
 </div>
