--- a/07-authapp/src/app/components/navbar/navbar.component.html
+++ b/07-authapp/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,12 @@
         </li>
       </ul>
       <span class="navbar-text">
-        Navbar text with an inline element
+        <button *ngIf="!auth.isAuthenticated$;" class="btn btn-outline-primary">
+          Ingresar
+        </button>
+        <button *ngIf="auth.isAuthenticated$;" class="btn btn-outline-danger">
+          Salir
+        </button>
       </span>
     </div>
 </nav>
