--- a/07-authapp/src/app/components/navbar/navbar.component.html
+++ b/07-authapp/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,11 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="precios">Precios</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li 
+          class="nav-item" 
+          routerLinkActive="active"
+          *ngIf="auth.isAuthenticated$ | async;"
+        >
           <a class="nav-link" routerLink="protegida">Protegida</a>
         </li>
       </ul>
@@ -16,7 +20,8 @@
         <button 
           class="btn btn-outline-primary" 
           *ngIf="!(auth.isAuthenticated$ | async);"
-          (click)="auth.loginWithRedirect()">
+          (click)="auth.loginWithRedirect()"
+        >
           Ingresar
         </button>
         <button 
