--- a/07-authapp/src/app/components/protegida/protegida.component.html
+++ b/07-authapp/src/app/components/protegida/protegida.component.html
@@ -1,1 +1,7 @@
-<p>protegida works!</p>
+<h1>Perfil de usuario</h1>
+<br>
+<pre *ngIf="auth.user$ | async as user">
+    <code>{{user | json}}</code>
+</pre>
+
+
