--- a/07-bonus-loginApp/src/app/pages/registro/registro.component.html
+++ b/07-bonus-loginApp/src/app/pages/registro/registro.component.html
@@ -9,7 +9,7 @@
                         Crear nueva cuenta
                     </span>
     
-                    <!-- <span class="text-danger">El correo es obligatorio</span> -->
+                    <span *ngIf="formulario.submitted && formulario.controls['email'].errors" class="text-danger animated fadeIn">El correo es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100" 
                                type="email" 
@@ -22,7 +22,7 @@
                         <span class="focus-input100"></span>
                     </div>
 
-                    <!-- <span class="text-danger">El nombre es obligatorio</span> -->
+                    <span *ngIf="formulario.submitted && formulario.controls['nombre'].errors" class="text-danger animated fadeIn">El nombre es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100" 
                                type="text" 
@@ -35,8 +35,8 @@
                         <span class="focus-input100"></span>
                     </div>
                     
-                    <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
-                    <div class="wrap-input100 m-b-16" data-validate = "Password is required">
+                    <span *ngIf="formulario.submitted && formulario.controls['password'].errors" class="text-danger animated fadeIn">La contraseña debe de ser más de 6 letras</span>
+                    <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="password" 
                                name="password" 
