--- a/08-formularios/src/app/pages/template/template.component.html
+++ b/08-formularios/src/app/pages/template/template.component.html
@@ -86,6 +86,32 @@
   </div>
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Genero</label>
+    <div class="col-8">
+      <div class="form-check form-check-inline">
+        <input type="radio" class="form-check-input"
+                name="genero"
+                [ngModel]="usuario.genero"
+                [class.is-invalid]="genero.invalid && genero.touched"
+                required
+                value="M"
+                #genero="ngModel">
+        <label class="form-check-label">Masculino</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input type="radio" class="form-check-input"
+                name="genero"
+                [ngModel]="usuario.genero"
+                [class.is-invalid]="genero.invalid && genero.touched"
+                required
+                value="F"
+                #genero="ngModel">
+        <label class="form-check-label">Femenino</label>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
       <button type="submit" class="btn btn-outline-primary">
