--- a/08-formularios/src/app/pages/reactive/reactive.component.html
+++ b/08-formularios/src/app/pages/reactive/reactive.component.html
@@ -51,3 +51,13 @@
   </div>
 
 </form>
+
+<hr>
+<pre>
+  Estado del formulario: {{forma.valid}}
+  <br>
+  Statis: {{forma.status}}
+</pre>
+<pre>
+  {{forma.value | json}}
+</pre>
