--- a/08-formularios/src/app/pages/reactive/reactive.component.html
+++ b/08-formularios/src/app/pages/reactive/reactive.component.html
@@ -6,7 +6,7 @@
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Nombre</label>
-      <div class="col-8">
+      <div class="col">
 
         <input class="form-control"
                type="text"
@@ -21,7 +21,7 @@
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Apellido</label>
-      <div class="col-8">
+      <div class="col">
 
         <input class="form-control"
                type="text"
@@ -38,7 +38,7 @@
 
   <div class="form-group row">
     <label class="col-2 col-form-label">Correo</label>
-    <div class="col-md-8">
+    <div class="col">
 
       <input class="form-control"
              type="email"
@@ -52,6 +52,23 @@
   </div>
 
 
+  <div class="form-group row" formGroupName="direccion">
+    <label class="col-2 col-form-label">Direccion</label>
+    <div class="form-row col">
+      <div class="col">
+        <input type="text"
+               class="form-control"
+               placeholder="Distrito"
+               formControlName="distrito">
+      </div>
+      <div class="col">
+        <input type="text"
+               class="form-control"
+               placeholder="DIstrito"
+               formControlName="ciudad">
+      </div>
+    </div>
+  </div>
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
