--- a/08-formularios/src/app/pages/reactive/reactive.component.html
+++ b/08-formularios/src/app/pages/reactive/reactive.component.html
@@ -98,7 +98,8 @@
                      [formControlName]="i">
             </td>
             <td>
-              <button class="btn btn-danger">
+              <button class="btn btn-danger"
+                      (click)="borrarPasatiempo(i)">
                 Borrar
               </button>
             </td>
@@ -107,7 +108,8 @@
       </table>
 
       <button class="btn btn-primary mt-3 mb-5 btn-block"
-              type="button">
+              type="button"
+              (click)="agregarPasatiempo()">
         Agregar
       </button>
 
@@ -129,7 +131,7 @@
 <pre>
   Estado del formulario: {{forma.valid}}
   <br>
-  Statis: {{forma.status}}
+  Status: {{forma.status}}
 </pre>
 <pre>
   {{forma.value | json}}
