--- a/08-formularios/src/app/pages/reactive/reactive.component.html
+++ b/08-formularios/src/app/pages/reactive/reactive.component.html
@@ -50,6 +50,30 @@
       </small>
     </div>
   </div>
+  
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Contraseña</label>
+    <div class="col">
+
+      <input class="form-control"
+             type="password"
+             placeholder="Contraseña"
+             [class.is-invalid]="pass1NoValida"
+             formControlName="pass1">
+    </div>
+  </div>
+  
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Repita</label>
+    <div class="col">
+
+      <input class="form-control"
+             type="password"
+             placeholder="Repita contraseña"
+             [class.is-invalid]="pass2NoValida"
+             formControlName="pass2">
+    </div>
+  </div>
 
 
   <div class="form-group row" formGroupName="direccion">
