--- a/09-heroesApp/src/app/pages/heroe/heroe.component.html
+++ b/09-heroesApp/src/app/pages/heroe/heroe.component.html
@@ -13,36 +13,47 @@
 
 <div class="row animated fadeIn fast">
     <div class="col">
-        <form>
+        <form (ngSubmit)="guardar(formulario)" #formulario="ngForm">
             <div class="form-group">
                 <label>FIrebase ID</label>
                 <input  type="text"
                         class="form-control"
                         placeholder="Firebase ID"
+                        [(ngModel)]="heroe.id"
+                        name="id"
                         disabled="disabled">
                 <small class="form-text text-muted">Este campo  es autogenerado</small>
             </div>
+
             <div class="form-group">
                 <label>Nombre</label>
                 <input  type="text"
                         class="form-control"
                         placeholder="Nombre del heroe"
+                        [(ngModel)]="heroe.nombre"
+                        name="nombre"
                         required>
             </div>
             <div class="form-group">
                 <label>Poder</label>
                 <input  type="text"
                         class="form-control"
+                        [(ngModel)]="heroe.poder"
+                        name="poder"
                         placeholder="Poder del heroe">
             </div>
             <div class="form-group">
                 <label>Estado</label>
                 <br>
-                <button class="btn btn-outline-success w-50" type="button">
+                <button *ngIf="heroe.vivo"
+                        (click)="heroe.vivo = false"
+                        class="btn btn-outline-success w-50" type="button">
                     <i class="fa fa-smile-wink"></i>
                     Vivo
                 </button>
-                <button class="btn btn-outline-danger w-50" type="button">
+                <button *ngIf="!heroe.vivo"
+                        (click)="heroe.vivo = true"
+                        class="btn btn-outline-danger w-50" type="button">
                     <i class="fa fa-dizzy"></i>
                     Muerto
                 </button>
