--- a/10-firechat/src/app/components/chat/chat.component.html
+++ b/10-firechat/src/app/components/chat/chat.component.html
@@ -1,7 +1,14 @@
 <h1>Chat</h1>
 <hr>
 <div class="app-mensajes" id="app-mensajes">
-    <div class="text-right">
+    <div class="text-right" *ngFor="let chat of _chatService.chats">
+        <span class="badge badge-success">Maria</span>
+        <p>
+            {{chat.mensaje}}
+        </p>
+    </div>
+
+    <!-- <div class="text-right">
         <span class="badge badge-primary">Francis</span>
         <p>
             Este es un mensaje de chat
@@ -12,7 +19,7 @@
         <p>
             Saludos Fernando
         </p>
-    </div>
+    </div> -->
 </div>
 <input type="text" name="mensaje" 
         [(ngModel)]="mensaje" 
