--- a/10-firechat/src/app/app.component.html
+++ b/10-firechat/src/app/app.component.html
@@ -1,6 +1,13 @@
 <div class="container main-container">
   <h1>Firechat</h1>
-  <app-login></app-login>
+  <div class="col-md-12 text-right">
+    <button *ngIf="chatservice.usuario.uid" 
+            (click)="chatservice.logout()" 
+            class="btn btn-outline-danger">
+      Salir
+    </button>
+  </div>
+  <app-login *ngIf="!chatservice.usuario.uid" ></app-login>
   <!-- <div class="chat-window">
     <app-chat></app-chat>
   </div> -->
