--- a/10-firechat/src/app/components/chat/chat.component.html
+++ b/10-firechat/src/app/components/chat/chat.component.html
@@ -1,8 +1,13 @@
 <h1>Chat</h1>
 <hr>
 <div class="app-mensajes" id="app-mensajes">
-    <div class="text-right" *ngFor="let chat of _chatService.chats">
-        <span class="badge badge-success">Maria</span>
+    <div *ngFor="let chat of _chatService.chats"
+        [ngClass]="{'text-right': _chatService.usuario.uid == chat.uid}">
+        <span class="badge"
+            [ngClass]="{'badge-primary': _chatService.usuario.uid == chat.uid,
+                        'badge-success': _chatService.usuario.uid != chat.uid}">
+            {{chat.nombre}}
+        </span>
         <p>
             {{chat.mensaje}}
         </p>
